--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h2>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(11+ and GCSE)</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/2plus2.png" class="img-fluid" alt="">
+          <img src="assets/img/sum.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
