--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CJ Private Tuition</title>
 
   <meta name="description" content="Claire Jamieson Private Tuition">
-  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, IT, information technology, GCSE, 11+, eleven plus, Brentwood">
+  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, Key stage 3, GCSE, 11+, eleven plus, Brentwood">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Something not quite adding up?</h1>
-          <h2>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(11+ and GCSE)</h2>
+          <h2>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stage 3 and GCSE)</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/sum.png" class="img-fluid" alt="">
