Remove duplicate information.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CJ Private Tuition</title>
 
   <meta name="description" content="Claire Jamieson Private Tuition">
-  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, Key stage 3, GCSE, 11+, eleven plus, Brentwood">
+  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, Key stage 3, GCSE, 11+, eleven plus, Brentwood, Essex, Top">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -190,6 +190,10 @@ I am married with three grown-up children.
           </div>
 
           <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
+		  <!-- Empty space -->
+          </div>
+
+          <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-happy"></i></div>
               <p class="description left">
@@ -200,14 +204,6 @@ I am married with three grown-up children.
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-happy"></i></div>
-              <p class="description left">
-		My daughter has found her sessions with Claire very helpful and Claire
-		has responded to her individual needs with additional learning material.</p>
-            </div>
-          </div>
         </div>
 
         <div class="row">
@@ -283,8 +279,4 @@ I am married with three grown-up children.
   <script src="assets/js/main.js"></script>
 
 </body>
-<!--
-
-
--->
 </html>
