--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@ I am married with three grown-up children.
               <div class="icon"><i class="bx bx-happy"></i></div>
               <p class="description left inter-para-gap">
 		I was recommended Claire for my son.  He had failed his GCSE maths and
-		was doing a resit.  After lessons with Claire he passed second time around.</p>
+		was doing a re-sit.  After lessons with Claire he passed second time around.</p>
               <p class="description left inter-para-gap">
 		Claire then started teaching my daughter who was really struggling with Maths.
 		Her school had told me to expect a fail in this subject. Claire methodically
 		and thoroughly worked through the syllabus with my daughter. Having spoken to
 		my daughter, Claire made the lessons fun and enjoyable which always helps a
-		teenage girl.  When I went to pick up my daughters GCSE results, I was
+		teenage girl.  When I went to pick up my daughter&rsquo;s GCSE results, I was
 		called to the side by one of the teachers who told me to expect something
 		amazing in my daughter&rsquo;s result envelope.  My daughter had an A
 		in maths.  I was so proud of her.</p>
