--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>CJ Private Tuition</title>
 
-  <meta name="description" content="Claire Jamieson Private Tuition">
+  <meta name="description" content="Claire Jamieson Private tuition in maths Key Stage 3, GCSE and Eleven Plus.  Brentwood, Essex and online.">
   <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, Key stage 3, GCSE, 11+, eleven plus, Brentwood, Essex, Top">
   <meta name="google-site-verification" content="YQHuXUZ1iZUnUOV5r5G0LGDcKNnpacFvU-J3IX1Cw6E">
 
@@ -45,7 +45,7 @@
     <div class="container-fluid d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="" class="img-fluid">&nbsp;&nbsp;<span>CJ Tuition</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="Logo" class="img-fluid">&nbsp;&nbsp;<span>CJ Tuition</span></a></h1>
       </div>
 
 
@@ -68,10 +68,10 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Something not quite adding up?</h1>
-          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stage 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country.</h2>
+          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stage 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/sum.png" class="img-fluid" alt="">
+          <img src="assets/img/sum.png" class="img-fluid" alt="Sum">
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
 
         <div class="row justify-content-between">
           <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
-            <img src="assets/img/cj.jpg" class="img-fluid" alt="" data-aos="zoom-in">
+            <img src="assets/img/cj.jpg" class="img-fluid" alt="Claire Jamieson" data-aos="zoom-in">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Claire Jamieson</h3>
