--- a/index.html
+++ b/index.html
@@ -191,7 +191,16 @@ I am married with three grown-up children.
           </div>
 
           <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-		  <!-- Empty space -->
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-happy"></i></div>
+              <p class="description left">
+                Very patient and extremely knowledgeable. Claire really knows her subject
+		and her ability to explain the most complex questions is superb.</p>
+	      <br><br>
+              <p class="description left">
+                My daughter gained a world of confidence with her maths from spending an
+		hour a week with Claire. I can't recommend highly enough.</p>
+            </div>
           </div>
 
           <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
