Add new section.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="container-fluid d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="Logo" class="img-fluid">&nbsp;&nbsp;<span>CJ Tuition</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="Logo" class="img-fluid">&nbsp;&nbsp;<span>CJ Tuition</span></a>
+	</h1>
       </div>
 
 
@@ -55,6 +56,7 @@
           <li><a href="#about">About me</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#tip-of-the-week">Tip of the week</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -145,7 +147,7 @@ I am married with three grown-up children.
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="services" style="background-color:pink">
       <div class="container">
 
@@ -245,17 +247,47 @@ I am married with three grown-up children.
           </div>
 	  </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Testimonials section -->
+
+
+    <!-- ======= Tip-of-the-week Section ======= -->
+    <section id="tip-of-the-week" class="about">
+      <div class="container">
+
+        <div class="row justify-content-between">
+          <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
+            <img src="assets/img/tipOfTheWeek.jpg" class="img-fluid" alt="Tip of the week" data-aos="zoom-in">
+          </div>
+          <div class="col-lg-6 pt-5 pt-lg-0">
+            <h3 data-aos="fade-up">Tip of the week</h3>
+            <p data-aos="fade-up" data-aos-delay="100">
+              It&rsquo;s not difficult to find out <em>what</em> you need to learn &mdash; but not at all easy to find out how to set about it.  I give below some simple weekly tips which I have found useful over my years of teaching.</p>
+	      <br>
+            <h4 data-aos="fade-up" data-aos-delay="100">Tip 1: Environment</h4>
+            <p data-aos="fade-up" data-aos-delay="100">
+	      Make sure that you are working in a reasonable environment.  If you’re too hot, too comfortable, or have just eaten a large meal, you’ll go to sleep.  If you’re too cold, too uncomfortable, too hungry or there’s too much else going on around you, you’ll be distracted.
+            </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-between">
+          <br><br><br> <!-- Seem to need this to avoid material being hidden behind footer. -->
+        </div>
+      </div>
+    </section><!-- End Tip-of-the-week section -->
+
   </main><!-- End #main -->
 
+
+
   <!-- ======= Footer ======= -->
-<footer id="footer">
+  <footer id="footer">
     <div class="container py-4">
       <div class="copyright">
         <h4>
-	  <i class="icofont-phone"></i>&nbsp;Phone:&nbsp;<script language="JavaScript">document.write("07922" + "&nbsp;&nbsp;044" + "&nbsp;&nbsp;114");</script>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <i class="icofont-phone"></i>&nbsp;Phone:&nbsp;<script>document.write("07922" + "&nbsp;&nbsp;044" + "&nbsp;&nbsp;114");</script>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  <i class="icofont-envelope"></i>&nbsp;Email:&nbsp;
-	  <script language="JavaScript">
+	  <script>
             var userName = "claire";
             var hostName = "critos";
 	    hostName = hostName + ".co.uk";
@@ -273,8 +305,10 @@ I am married with three grown-up children.
       </div>
     </div>
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  </footer>
 
+  
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
