Minor change to wording.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@ I am married with three grown-up children.
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Tip of the week</h3>
             <p data-aos="fade-up" data-aos-delay="100">
-              It&rsquo;s not difficult to find out <em>what</em> you need to learn &mdash; but not at all easy to find out how to set about it.  I give below some simple weekly tips which I have found useful over my years of teaching.</p>
+              It&rsquo;s not difficult to find out <em>what</em> you need to learn &mdash;
+              but not at all easy to find out how to set about it.  I give below some simple
+	      weekly tips which I have found useful over my years of teaching &mdash;
+	      some obvious (but easily overlooked), some perhaps not so obvious.</p>
 	      <br>
             <h4 data-aos="fade-up" data-aos-delay="100">Tip 1: Environment</h4>
             <p data-aos="fade-up" data-aos-delay="100">
