--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Something not quite adding up?</h1>
-          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stage 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country</h2>
+          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stages 2 and 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/sum.png" class="img-fluid" alt="Sum">
