Random selection of top of the week.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+  <!-- =======================================================
+  * Template Name: Ninestars - v2.0.0
+  * Template URL: https://bootstrapmade.com/ninestars-free-bootstrap-3-theme-for-creative/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -30,15 +37,10 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/overrides.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Ninestars - v2.0.0
-  * Template URL: https://bootstrapmade.com/ninestars-free-bootstrap-3-theme-for-creative/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
-<body>
+<body onload="onload();">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -265,10 +267,10 @@ I am married with three grown-up children.
               but not at all easy to find out how to set about it.  I give below some simple
 	      weekly tips which I have found useful over my years of teaching &mdash;
 	      some obvious (but easily overlooked), some perhaps not so obvious.</p>
-	      <br>
-            <h4 data-aos="fade-up" data-aos-delay="100">Tip 1: Environment</h4>
-            <p data-aos="fade-up" data-aos-delay="100">
-	      Make sure that you are working in a reasonable environment.  If you’re too hot, too comfortable, or have just eaten a large meal, you’ll go to sleep.  If you’re too cold, too uncomfortable, too hungry or there’s too much else going on around you, you’ll be distracted.
+	    <br>
+	    
+            <h4 data-aos="fade-up" data-aos-delay="100"><span id="tip-of-the-week-header"></span></h4>
+            <p id="tip-of-the-week-text" data-aos="fade-up" data-aos-delay="100">
             </p>
           </div>
         </div>
@@ -325,5 +327,10 @@ I am married with three grown-up children.
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+
+  <!-- My JS stuff -->
+  <script src="assets/js/local.js"></script>
+
 </body>
 </html>
+
