Add financial information

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ I am married with three grown-up children.
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Technology</a></h4>
-              <p class="description left inter-para-gap">I use both Zoom and Skype &mdash; choose whichever is most convenient.  (If you have not used either technology, I recommend Zoom.)</p>
+              <p class="description left inter-para-gap">I use both Zoom and Skype &mdash; choose whichever is more convenient.</p>
               <p class="description left">I can help with setup and configuration.</p>
             </div>
           </div>
@@ -142,6 +142,17 @@ I am married with three grown-up children.
               <div class="icon"><i class="bx bx-smile"></i></div>
               <h4 class="title"><a href="">No risk</a></h4>
               <p class="description">No charge for help with setup &bull; No charge for first lesson unless you are fully satisfied &bull; One-off or regular lessons &bull; No need for long-term commitment.</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+          </div>
+
+          <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-pound"></i></div>
+              <h4 class="title"><a href="">Fees (per hour)</a></h4>
+              <p class="description left inter-para-gap">&bull; Key Stage 2 & 3: £28<br>&bull; GCSE: £34<br>&bull; Group tuition (2 or 3 children): £40<br>&bull; Shorter times available pro rata.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             </div>
           </div>
         </div>
@@ -333,4 +344,3 @@ I am married with three grown-up children.
 
 </body>
 </html>
-
