Tweak to wording.a

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ I am married with three grown-up children.
           <div class="col-md-4 col-lg-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-pound"></i></div>
-              <h4 class="title"><a href="">Fees (per hour)</a></h4>
+              <h4 class="title"><a href="">Rates (per hour)</a></h4>
               <p class="description left inter-para-gap">&bull; Key Stage 2 & 3: £28<br>&bull; GCSE: £34<br>&bull; Group tuition (2 or 3 children): £40<br>&bull; Shorter times available pro rata.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             </div>
           </div>
