--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ I am married with three grown-up children.
         </div>
 
         <div class="row justify-content-between">
-          <br><br><br> <!-- Seem to need this to avoid material being hidden behind footer. -->
+          &nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp; <!-- Seem to need this to avoid material being hidden behind footer. -->
         </div>
       </div>
     </section><!-- End Tip-of-the-week section -->
