--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ I am married with three grown-up children.
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Tuition</a></h4>
-              <p class="description">Maths for 11+.</p>
-              <p class="description">GCSE Maths.</p><br>
+              <p class="description">Maths for 11+</p>
+              <p class="description">GCSE Maths</p><br>
               <p class="description">Sympathetic tailored tuition suitable for pupils of all standards.</p>
             </div>
           </div>
@@ -141,7 +141,7 @@ I am married with three grown-up children.
             <div class="icon-box">
               <div class="icon"><i class="bx bx-smile"></i></div>
               <h4 class="title"><a href="">No risk</a></h4>
-              <p class="description">No charge for help with setup &bull; No charge for first lesson unless you are fully satisfied &bull; One-off or regular lessons &bull; No need for long-term commitment.</p>
+              <p class="description">No charge for help with setup &bull; Free initial assessment, with no commitment required &bull; One-off or regular lessons &bull; No need for long-term commitment.</p>
             </div>
           </div>
 
