Kerning on heading.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container-fluid d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="Logo" class="img-fluid">&nbsp;&nbsp;<span>CJ Tuition</span></a>
+        <h1 class="text-light"><a href="index.html"><img src="assets/img/cjOrange.png" alt="Logo" class="img-fluid">&nbsp;&nbsp;<span><span style="letter-spacing:-0.06em">CJ</span> Tuition</span></a>
 	</h1>
       </div>
 
