--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <title>CJ Private Tuition</title>
 
-  <meta name="description" content="Claire Jamieson Private tuition in maths Key Stage 3, GCSE and Eleven Plus.  Brentwood, Essex and online.">
-  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, Key stage 3, GCSE, 11+, eleven plus, Brentwood, Essex, Top">
+  <meta name="description" content="Claire Jamieson Private tuition in maths and computer science Key Stage 3, GCSE and Eleven Plus.  Brentwood, Essex and online.">
+  <meta name="keywords" content="tuition, teaching, private tuition, mathematics, maths, computer science, computer, computing, IT, Information technology, Key stage 3, GCSE, 11+, eleven plus, Brentwood, Essex, Top">
   <meta name="google-site-verification" content="YQHuXUZ1iZUnUOV5r5G0LGDcKNnpacFvU-J3IX1Cw6E">
 
   <!-- Favicons -->
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
           <h1>Something not quite adding up?</h1>
-          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths tuition<br>(Key stages 2 and 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country</h2>
+          <h2><br>Personalised <span style="color:#eb5d1e">online</span> maths aand computer science tuition<br>(Key stages 2 and 3 and GCSE)<br><br>Past pupils three times placed in the top five individuals in the country</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/sum.png" class="img-fluid" alt="Sum">
