--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ I am married with three grown-up children.
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Tuition</a></h4>
               <p class="description">Maths for 11+</p>
-              <p class="description">GCSE Maths</p><br>
+              <p class="description">Key stage 2 & 3 & GCSE Maths and Computer Science</p><br>
               <p class="description">Sympathetic tailored tuition suitable for pupils of all standards.</p>
             </div>
           </div>
