--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Claire Jamieson</h3>
             <p data-aos="fade-up" data-aos-delay="100">
-              I have 35 years of teaching experience and was Head of Department for Computer Science at secondary level.  I now provide private tuition in Maths for Eleven Plus and GCSE, and also help pupils prepare for school entrance exams.<br><br>
+              I have 35 years of teaching experience and was Head of Department for Computer Science at secondary level.  I now provide private tuition in Maths and Computer Science for Eleven Plus, Key stages 2 & 3 and GCSE, and also help pupils prepare for school entrance exams.<br><br>
 
 I have had three pupils achieve &lsquo;top five&rsquo; status (ie top five individual pupils in the country, not merely top 5%) at GCSE level &mdash; two for ICT and one for BCS (Business Communication Systems).  A very large majority of my pupils at GCSE level in ICT and BCS have achieved grade A or A*, and this from pupils of mixed abilities.  Similarly a very large majority of my pupils at A-level Computing have gained grade A or B.	Of my A-level pupils who have gone on to study Computing and related subjects at university, many have gained first class honours and some have been awarded &lsquo;best in year&rsquo; and &lsquo;best overall&rsquo; prizes at UCL and Imperial College.<br><br>
 
